--- a/styles.css
+++ b/styles.css
@@ -191,13 +191,10 @@ button {
   }
 }
 @media only screen and (min-width: 700px) {
-   .box-container {
-    padding: 0 20px;
-    width: 100%;
-  } 
   .card {
     float: left;
-    width: 33%;
+    width: 30%;
     flex-direction: column;
+    margin-left: 5px;
   }
 }
